add_library(bux-sqlite STATIC oo_sqlite.cpp)
if(DEFINED FETCH_DEPENDEES)
    target_include_directories(bux-sqlite PRIVATE ../include)
else()
    target_include_directories(bux-sqlite PRIVATE ../include ../${DEPENDEE_ROOT}/bux/include)
endif()
if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
target_link_libraries(bux-sqlite PRIVATE fmt::fmt)
endif()
